--- a/docs/Makefile
+++ b/docs/Makefile
@@ -11,6 +11,8 @@ PAPEROPT_a4     = -D latex_paper_size=a4
 PAPEROPT_letter = -D latex_paper_size=letter
 ALLSPHINXOPTS   = -d .build/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
+PYTHONPATH = $(HOME)/ciaopy/lib/python
+
 .PHONY: help clean html web pickle htmlhelp latex changes linkcheck
 
 help:
