--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 include docs/*.rst
 include examples/*.png
 include examples/*_m87.py
+include examples/acis-s-bkg.py
+include examples/fit_3c186.py
