--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,13 @@ install:
   - source activate test
   - conda install --yes numpy=$NUMPY pytest
   - conda install --yes -c sherpa sherpa
+  - pip install pytest-cov
 
   # I guess we should actually install the software!
   - pip install .
 
 script:
-  - py.test
+  - py.test --cov
+
+after_success:
+  - codecov
