--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ install:
   - conda install --yes numpy=$NUMPY pytest
   - conda install --yes -c sherpa sherpa
   - pip install pytest-cov
+  - pip install codecov
 
   # I guess we should actually install the software!
   - pip install .
