--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,13 +1,16 @@
+# readthedocs.yml
 
-# requirements_file: docs/rtd-pip-requirements
+version: 2
 
-# Use Python 3.5 since this is what is used by CIAO
-#
-python:
-   version: 3.5
-   setup_py_install: true
-   # use_system_site_packages: true
+sphinx:
+  configuration: docs/conf.py
 
 conda:
-   file: rtd-environment.yml
-   
+  environment: rtd-environment.yml
+  
+# requirements_file: docs/rtd-pip-requirements
+
+python:
+   version: 3.7
+   setup_py_install: true
+   # use_system_site_packages: true
