Can we fix the RTD build?

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -12,3 +12,6 @@ python:
    version: 3.8
    # setup_py_install: true
    # use_system_site_packages: true
+   install:
+     - method: pip
+       path: .
