Try using sherpa from CIAO when building the docs
Not convinced this is faster than building Sherpa.

--- a/rtd-environment.yml
+++ b/rtd-environment.yml
@@ -2,6 +2,8 @@ name: deproject
 
 channels:
   - defaults
+  - https://cxc.harvard.edu/conda/ciao
+  - conda-forge
 
 dependencies:
   - python=3.8
@@ -9,5 +11,4 @@ dependencies:
   - numpy
   - astropy
   - scipy
-  - pip:
-    - sherpa
+  - sherpa
