--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ classifiers =
 # zip_safe = False
 python_requires = ~=3.7
 install_requires =
-    sherpa
+    sherpa >= 4.14.0
     astropy
     scipy
 
