--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,56 @@
 [build-system]
-requires = ["setuptools >= 51.0.0, < 60",  # follow Sherpa
-            "wheel"
-            ]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling >= 1.27.0"]
+build-backend = "hatchling.build"
+
+[project]
+version = "0.2.3"
+license = "BSD-2-Clause"
+license-files = ["LICENSE"]
+
+name = "deproject"
+description = "Sherpa deprojection package (X-ray analysis of Galaxy Clusters, Groups, and Galaxies)"
+readme = {file = "README.rst", content-type = "text/x-rst" }
+
+authors = [
+  {name = "Tom Aldcroft"},
+  {name = "Douglas Burke", email = "dburke.gw@gmail.com"}
+]
+maintainers = [
+  {name = "Douglas Burke", email = "dburke.gw@gmail.com"}
+]
+
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Intended Audience :: Science/Research",
+  "Programming Language :: Python :: 3.12",
+  "Topic :: Scientific/Engineering :: Astronomy",
+  "Topic :: Scientific/Engineering :: Physics"
+]
+
+keywords = [
+  "deprojection",
+  "xray",
+  "3d",
+  "2d",
+  "plasma",
+  "Astrophysics",
+  "onion"
+]
+
+requires-python = ">= 3.12"
+
+dependencies = [
+  "sherpa >= 4.18.0",
+  "astropy",
+  "scipy"
+]
+
+[project.optional-dependencies]
+test = [
+  "pytest"
+]
+
+[project.urls]
+Documentation = "https://deproject.readthedocs.io/"
+Issues = "https://github.com/sherpa-deproject/deproject/issues/"
+Repository = "https://github.com/sherpa-deproject/deproject/"
